wrap frown face in span, add nowrap class and style white-space: nowrap; to stop breaking characters apart

--- a/style.css
+++ b/style.css
@@ -24,12 +24,6 @@ body {
   margin: 0;
 }
 
-/* #wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column-reverse;
-} */
-
 /* counter */
 h1 {
   font-size: 10vh;
@@ -49,10 +43,11 @@ h1 {
 }
 
 .scoreboard {
-  padding-top: 1rem;
+  padding: 1rem 1rem 0;
   background-color: #000000aa;
   width: 50vw;
   min-width: 500px;
+  text-align: center;
 }
 
 #svg8 {
@@ -66,6 +61,10 @@ button.missed-btn {
   height: 5vh;
   width: 70vh;
   font-weight: bold;
+}
+
+.nowrap {
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 550px) {
